--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gist-app",
+  "name": "Sudoku-Solver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,7 +18,6 @@
     "babel-preset-react": "^6.16.0",
     "ejs": "2.4.1",
     "express": "4.13.3",
-    "firebase": "^3.6.8",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.2",
