--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "heroku-postbuild": "webpack",
-    "test": "jest"
+    "test": "jest",
+    "gojo": "open http://localhost:5000/#/"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +22,6 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.2",
-    "reactfire": "^1.0.0",
     "webpack": "^1.14.0"
   }
 }
