--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "express": "4.13.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-fontawesome": "^1.5.0",
     "react-router": "^3.0.2",
     "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "react-fontawesome": "^1.5.0"
   }
 }
